# touchstone

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  reproduce_flake.sh  update_plots.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: release.md
examples/: combined_plot.html  ntwk3.s2p.html
files/: ADL8100 De_Embedded_S_params.s2p  LFCN-2352+_Plus125degC.s2p  LFCN-2352+_Plus25degC.s2p  RS_ZNB8.s4p  RS_ZVR_1.20_beta_f.s2p  cascade_ntwk1_ntwk2.s2p  expand4.html  expand5.html  expandable.html  fet.s2p  hfss_18.2.s3p  hfss_19.2.s10p  hfss_19.2.s8p  hfss_oneport.s1p  hfss_threeport_DB.s3p  hfss_threeport_DB_50Ohm.s3p  hfss_threeport_MA.s3p  hfss_threeport_MA_50Ohm.s3p  hfss_threeport_MA_without_gamma_z0_50Ohm.s3p  hfss_twoport.s2p  ntwk.s32p  ntwk1.s2p.html  ntwk2.s2p.html  ntwk4.s2p  ntwk4_n.s2p  ntwk_arbitrary_frequency.s2p  ntwk_noise.s2p  ntwk_noise_interp.s2p  ntwks_ntwk1.s2p  ntwks_ntwk2.s2p  ntwks_ntwk3.s2p  tailwindcss-3.4.17.js  thru.s2p
files/test_cli/: test_cli_run_bare_filename.s2p
files/test_plot_dir/: ntwk2.s2p  ntwk3.s2p
plots/: example.html  expand3.html  expand4.html  expand5.html  expandable.html  tailwindcss-3.4.17.js
sandbox/: expand5.html
scripts/: cut-release.sh
src/: cli.rs  data_line.rs  data_pairs.rs  error.rs  file_extension.rs  file_operations.rs  frequency.rs  lib.rs  main.rs  network_builder.rs  open.rs  option_line.rs  parser.rs  plot.rs  utils.rs
src/assets/: example.html  template_1port.html  template_2port.html
src/conversions/: mod.rs
src/parser/: data_line.rs  file.rs  mod.rs  option_line.rs
tests/: cli_integration.rs  edge_cases.rs  generated_network_contracts.rs  in_memory_network.rs  matrix_api.rs  network_builder.rs  readme_examples.rs  s2p_coverage.rs
tests/output/: ntwk1.html
