[package]
authors = ["Ian Cleary <rust@iancleary.me>"]
description = "Touchstone (s2p, etc.) file parser, plotter, and more"
documentation = "https://docs.rs/touchstone"
edition = "2021"
homepage = "https://github.com/iancleary/touchstone"
license = "MIT"
name = "touchstone"
repository = "https://github.com/iancleary/touchstone"
version = "0.10.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfconversions = "0.5.0"
