[package]
authors = ["Ian Cleary <iancleary@hey.com>"]
description = "Touchstone (s2p, etc.) file parser, plotter, and more"
documentation = "https://docs.rs/touchstone"
edition = "2021"
homepage = "https://github.com/iancleary/touchstone"
keywords = ["touchstone", "s-parameters", "rf", "parser", "plotting"]
categories = ["command-line-utilities", "parser-implementations", "science", "visualization"]
license = "MIT"
name = "touchstone"
readme = "README.md"
repository = "https://github.com/iancleary/touchstone"
version = "0.14.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfconversions = "0.7.0"
tracing = { version = "0.1.44", default-features = false }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"], optional = true }

[features]
default = ["cli"]
cli = ["dep:tracing-subscriber"]
